enhacements security