@@ -14,7 +14,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,7 +35,7 @@ public class HistorialPedidoServiceImpl implements HistorialPedidoService {
         return repository.findByFechaBetweenOrderByFechaDesc(inicio, fin)
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private HistorialPedidoResponseDTO toDTO(HistorialPedido h) {
